Revert "MM-49603 : Remove fetching of deleted channels on page load (#22981)"
This reverts commit 1bbfdefad73d12b44c6b1d14d219696c54c184c8.

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4318,26 +4318,10 @@
   "notify_here.question": "By using **@here** you are about to send notifications to up to **{totalMembers} other people**. Are you sure you want to do this?",
   "notify_here.question_timezone": "By using **@here** you are about to send notifications to up to **{totalMembers} other people** in **{timezones, number} {timezones, plural, one {timezone} other {timezones}}**. Are you sure you want to do this?",
   "numMembers": "{num, number} {num, plural, one {member} other {members}}",
-  "onboarding_wizard.cloud_plugins.description": "Mattermost is better when integrated with the tools your team uses for collaboration. Popular tools are below, select the ones your team uses and we'll add them to your workspace. Additional set up may be needed later.",
-  "onboarding_wizard.cloud_plugins.subtitle": "(almost there!)",
-  "onboarding_wizard.cloud_plugins.title": "Welcome to Mattermost!",
-  "onboarding_wizard.invite_members.copied_link": "Link Copied",
-  "onboarding_wizard.invite_members.copy_link": "Copy Link",
-  "onboarding_wizard.invite_members.copy_link_input": "team invite link",
-  "onboarding_wizard.invite_members.description_link": "Collaboration is tough by yourself. Invite a few team members using the invitation link below.",
-  "onboarding_wizard.invite_members.next_link": "Finish setup",
-  "onboarding_wizard.invite_members.title": "Invite your team members",
   "onboarding_wizard.launching_workspace.description": "It’ll be ready in a moment",
   "onboarding_wizard.launching_workspace.title": "Launching your workspace now",
   "onboarding_wizard.next": "Continue",
-  "onboarding_wizard.organization.description": "We’ll use this to help personalize your workspace.",
-  "onboarding_wizard.organization.empty": "You must enter an organization name",
-  "onboarding_wizard.organization.length": "Organization name must be between {min} and {max} characters",
-  "onboarding_wizard.organization.other": "Invalid organization name: {reason}",
-  "onboarding_wizard.organization.placeholder": "Organization name",
-  "onboarding_wizard.organization.reserved": "Organization name may not <a>start with a reserved word</a>.",
-  "onboarding_wizard.organization.team_api_error": "There was an error, please try again.",
-  "onboarding_wizard.organization.title": "What’s the name of your organization?",
+  "onboarding_wizard.plugins.description": "Mattermost is better when integrated with the tools your team uses for collaboration. Popular tools are below, select the ones your team uses and we'll add them to your workspace. Additional set up may be needed later.",
   "onboarding_wizard.plugins.github": "GitHub",
   "onboarding_wizard.plugins.github.tooltip": "Subscribe to repositories, stay up to date with reviews, assignments",
   "onboarding_wizard.plugins.gitlab": "GitLab",
@@ -4345,14 +4329,13 @@
   "onboarding_wizard.plugins.jira": "Jira",
   "onboarding_wizard.plugins.jira.tooltip": "Create Jira tickets from messages in Mattermost, get notified of important updates in Jira",
   "onboarding_wizard.plugins.marketplace": "More tools can be added once your workspace is set up. To see all available integrations, <a>visit the Marketplace.</a>",
+  "onboarding_wizard.plugins.subtitle": "(almost there!)",
+  "onboarding_wizard.plugins.title": "Welcome to Mattermost!",
   "onboarding_wizard.plugins.todo": "To do",
   "onboarding_wizard.plugins.todo.tooltip": "A plugin to track Todo issues in a list and send you daily reminders about your Todo list",
   "onboarding_wizard.plugins.zoom": "Zoom",
   "onboarding_wizard.plugins.zoom.tooltip": "Start Zoom audio and video conferencing calls in Mattermost with a single click",
-  "onboarding_wizard.previous": "Previous",
-  "onboarding_wizard.self_hosted_plugins.description": "Choose the tools you work with, and we'll add them to your workspace. Additional set up may be needed later.",
-  "onboarding_wizard.self_hosted_plugins.title": "What tools do you use?",
-  "onboarding_wizard.skip-button": "Skip",
+  "onboarding_wizard.skip": "Skip for now",
   "onboarding_wizard.submit_error.generic": "Something went wrong. Please try again.",
   "onboardingTask.checklist.completed_subtitle": "We hope Mattermost is more familiar now.",
   "onboardingTask.checklist.completed_title": "Well done. You’ve completed all of the tasks!",
@@ -5784,9 +5767,6 @@
   "work_templates.preview.integrations.admin_install.multiple_plugin": "Integrations will not be added until admin installs them.",
   "work_templates.preview.integrations.admin_install.notify": "Notify admin to install integrations",
   "work_templates.preview.integrations.admin_install.single_plugin": "{plugin} will not be added until admin installs it.",
-  "work_templates.preview.integrations.already_installed": "Already installed",
-  "work_templates.preview.integrations.app_install": "App Install",
-  "work_templates.preview.integrations.to_be_installed": "To be installed",
   "work_templates.preview.modal_cancel_button": "Back",
   "work_templates.preview.modal_next_button": "Next",
   "work_templates.preview.modal_title": "Preview {useCase}",
