--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3056,7 +3056,7 @@
   "cloud_billing.nudge_to_yearly.announcement_bar": "Monthly billing will be discontinued in {days} days . Switch to annual billing",
   "cloud_billing.nudge_to_yearly.contact_sales": "Contact sales",
   "cloud_billing.nudge_to_yearly.description": "Monthly billing will be discontinued on {date}. To keep your workspace, switch to annual billing.",
-  "cloud_billing.nudge_to_yearly.learn_more": "Learn more",
+  "cloud_billing.nudge_to_yearly.learn_more": "Update billing",
   "cloud_billing.nudge_to_yearly.title": "Action required: Switch to annual billing to keep your workspace.",
   "cloud_delinquency.banner.buttonText": "Update billing now",
   "cloud_delinquency.banner.end_user_notify_admin_button": "Notify admin",
