--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3030,9 +3030,9 @@
   "cloud_archived.error.title": "Message Archived",
   "cloud_billing_history_modal.title": "Invoice(s)",
   "cloud_billing.nudge_to_yearly.contact_sales": "Contact sales",
-  "cloud_billing.nudge_to_yearly.description": "Simplify your billing by switching to an annual subscription.",
-  "cloud_billing.nudge_to_yearly.learn_more": "Learn more",
-  "cloud_billing.nudge_to_yearly.title": "Switch to an annual plan today",
+  "cloud_billing.nudge_to_yearly.description": "Monthly billing will be discontinued on {date}. To keep your workspace, switch to annual billing.",
+  "cloud_billing.nudge_to_yearly.learn_more": "Update billing",
+  "cloud_billing.nudge_to_yearly.title": "Action required: Switch to annual billing to keep your workspace.",
   "cloud_delinquency.banner.buttonText": "Update billing now",
   "cloud_delinquency.banner.end_user_notify_admin_button": "Notify admin",
   "cloud_delinquency.banner.end_user_notify_admin_title": "Your workspace has been downgraded. Notify your admin to fix billing issues",
