fixing PR comments

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -5263,7 +5263,7 @@
   "user_groups_modal.allGroups": "All Groups",
   "user_groups_modal.archivedGroups": "Archived Groups",
   "user_groups_modal.archiveGroup": "Archive Group",
-  "user_groups_modal.button.restoreGroup": "Restore group",
+  "user_groups_modal.button.restoreGroup": "Restore Group",
   "user_groups_modal.createNew": "Create Group",
   "user_groups_modal.createTitle": "Create Group",
   "user_groups_modal.editDetails": "Edit Details",
