Changes according to review comments

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3007,8 +3007,8 @@
   "channel_threads.filters.createdByMe": "Created by me",
   "channel_threads.filters.following": "Following",
   "channel_threads.noResults.all": "There are no threads in this channel.",
-  "channel_threads.noResults.created": "You don’t have any threads that you created in this channel.",
-  "channel_threads.noResults.following": "You don’t follow any threads in this channel.",
+  "channel_threads.noResults.created": "You don't have any threads that you created in this channel.",
+  "channel_threads.noResults.following": "You don't follow any threads in this channel.",
   "channel_threads.noResults.title": "No threads here",
   "channel_toggle_button.private": "Private",
   "channel_toggle_button.public": "Public",
