--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -2982,6 +2982,10 @@
   "channel_notifications.ignoreChannelMentions.help": "When enabled, @channel, @here and @all will not trigger mentions or mention notifications in this channel.",
   "channel_notifications.ignoreChannelMentions.off.title": "Off",
   "channel_notifications.ignoreChannelMentions.on.title": "On",
+  "channel_notifications.channelAutoFollowThreads": "Auto-follow all new threads in this channel",
+  "channel_notifications.channelAutoFollowThreads.help": "When enabled, you will auto-follow all new threads created in this channel unless you unfollow a thread explicitly.",
+  "channel_notifications.channelAutoFollowThreads.off.title": "Off",
+  "channel_notifications.channelAutoFollowThreads.on.title": "On",
   "channel_notifications.levels.all": "All",
   "channel_notifications.levels.default": "Default",
   "channel_notifications.levels.mention": "Mention",
