--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4037,7 +4037,7 @@
   "learn_more_about_trial.modal.useSsoDescription": "Sign on quickly and easily with our SSO feature that works with OpenID, SAML, Google, and O365.",
   "learn_more_about_trial.modal.useSsoTitle": "Use SSO (with OpenID, SAML, Google, O365)",
   "learn_more_trial_modal_step.learnMoreAboutFeature": "Learn more about this feature.",
-  "learn_more_trial_modal.contact_sales": "Contact sales",
+  "learn_more_trial_modal.contact_sales": "Contact Sales",
   "learn_more_trial_modal.pretitle": "With Enterprise, you can...",
   "leave_private_channel_modal.leave": "Yes, leave channel",
   "leave_private_channel_modal.message": "Are you sure you wish to leave the private channel {channel}? You must be re-invited in order to re-join this channel in the future.",
