MM-51481_Add Apps button and category context menu

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4201,6 +4201,7 @@
   "more_channels.show_public_channels": "Channel Type: Public",
   "more_channels.title": "More Channels",
   "more_channels.view": "View",
+  "more_direct_bot_channels_modal.title": "Apps",
   "more_direct_channels.directchannel.deactivated": "{displayname} - Deactivated",
   "more_direct_channels.directchannel.you": "{displayname} (you)",
   "more_direct_channels.new_convo_note": "This will start a new conversation. If you're adding a lot of people, consider creating a private channel instead.",
@@ -4872,6 +4873,8 @@
   "shortcuts.msgs.search_channel": "In channel:\tCtrl|F",
   "shortcuts.msgs.search_channel.mac": "In channel:\t⌘|F",
   "shortcuts.msgs.search.header": "Searching",
+  "shortcuts.nav.apps_menu": "Direct messages menu:\tCtrl|Shift|J",
+  "shortcuts.nav.apps_menu.mac": "Direct messages menu:\t⌘|Shift|J",
   "shortcuts.nav.direct_messages_menu": "Direct messages menu:\tCtrl|Shift|K",
   "shortcuts.nav.direct_messages_menu.mac": "Direct messages menu:\t⌘|Shift|K",
   "shortcuts.nav.expand_sidebar": "Expand the right sidebar:\tCtrl|Shift|.",
@@ -4915,6 +4918,7 @@
   "sidebar_left.add_channel_dropdown.invitePeopleExtraText": "Add people to the team",
   "sidebar_left.add_channel_dropdown.work_template": "Create from a template",
   "sidebar_left.add_channel_dropdown.work_template_extra": "Link channels, boards, and playbooks together",
+  "sidebar_left.addApps": "Add Apps",
   "sidebar_left.addChannelsCta": "Add channels",
   "sidebar_left.channel_filter.filterByUnread": "Filter by unread",
   "sidebar_left.channel_filter.filterUnreadAria": "unreads filter",
@@ -4966,6 +4970,9 @@
   "sidebar.directchannel.you": "{displayname} (you)",
   "sidebar.menu.item.notSelected": "not selected",
   "sidebar.menu.item.selected": "selected",
+  "sidebar.openAppMarketplace": "App Marketplace",
+  "sidebar.openAppMarketplaceModal": "App Marketplace",
+  "sidebar.openAppsModal": "Apps",
   "sidebar.openDirectMessage": "Open a direct message",
   "sidebar.show": "Show",
   "sidebar.sort": "Sort",
@@ -4976,6 +4983,7 @@
   "sidebar.team_menu.button.teamInitials": "{teamName} Team Initials",
   "sidebar.team_menu.menuAriaLabel": "team menu",
   "sidebar.team_select": "{siteName} - Join a team",
+  "sidebar.types.apps": "APPS",
   "sidebar.types.channels": "CHANNELS",
   "sidebar.types.direct_messages": "DIRECT MESSAGES",
   "sidebar.types.favorites": "FAVORITES",
