--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -315,8 +315,7 @@
   "admin.billing.subscription.cloudTrial.subscribeButton": "Upgrade Now",
   "admin.billing.subscription.cloudTrialBadge.daysLeftOnTrial": "{daysLeftOnTrial} trial days left",
   "admin.billing.subscription.cloudYearlyBadge": "Annual",
-  "admin.billing.subscription.complianceScreenFailed.button": "Continue with Cloud Free",
-  "admin.billing.subscription.complianceScreenFailed.subtitle": "We will check things on our side and get back to you within 3 days once your Cloud subscription upgrade is approved. In the meantime, please feel free to continue using the free version of our product.",
+  "admin.billing.subscription.complianceScreenFailed.button": "OK",
   "admin.billing.subscription.complianceScreenFailed.title": "Your transaction is being reviewed",
   "admin.billing.subscription.complianceScreenShippingSameAsBilling": "My shipping address is the same as my billing address",
   "admin.billing.subscription.constCloudCard.contactSupport": "Contact support",
