[MM-52286] - Update Annual discount panel (#23092)
Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -381,8 +381,8 @@
   "admin.billing.subscription.planDetails.productName.unknown": "Unknown product",
   "admin.billing.subscription.planDetails.subheader": "Plan details",
   "admin.billing.subscription.planDetails.userCount": "{userCount} users",
-  "admin.billing.subscription.privateCloudCard.cloudEnterprise.description": "At Mattermost, we work with you and your team to meet your needs throughout the product. If you are looking for an annual discount, please reach out to our sales team.",
-  "admin.billing.subscription.privateCloudCard.cloudEnterprise.title": "Looking for an annual discount? ",
+  "admin.billing.subscription.privateCloudCard.cloudEnterprise.description": "At Mattermost, we work with you and your organization to meet your needs throughout the product. If you’re considering a wider rollout, talk to us.",
+  "admin.billing.subscription.privateCloudCard.cloudEnterprise.title": "Looking to rollout Mattermost for your entire organization? ",
   "admin.billing.subscription.privateCloudCard.cloudFree.description": "Optimize your processes with Guest Accounts, Office365 suite integrations, GitLab SSO and advanced permissions.",
   "admin.billing.subscription.privateCloudCard.cloudFree.title": "Upgrade to Cloud Professional",
   "admin.billing.subscription.privateCloudCard.cloudProfessional.description": "Advanced security and compliance features with premium support. See {pricingLink} for more details.",
