--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -326,7 +326,7 @@
   "admin.billing.subscription.deleteWorkspaceModal.deleteButton": "Delete Workspace",
   "admin.billing.subscription.deleteWorkspaceModal.downgradeButton": "Downgrade To Free",
   "admin.billing.subscription.deleteWorkspaceModal.title": "Are you sure you want to delete?",
-  "admin.billing.subscription.deleteWorkspaceModal.usage": "As part of your paid subscription to Mattermost {sku} you have created ",
+  "admin.billing.subscription.deleteWorkspaceModal.usage": "As part of your subscription to Mattermost {sku} you have created ",
   "admin.billing.subscription.deleteWorkspaceModal.usageDetails": "{messageCount} messages and {fileSize} of files",
   "admin.billing.subscription.deleteWorkspaceModal.warning": "Deleting your workspace is final. Upon deleting, you'll lose all of the above with no ability to recover. If you downgrade to Free, you will not lose this information.",
   "admin.billing.subscription.deleteWorkspaceSection.delete": "Delete Workspace",
