adding copy for group warning

--- a/webapp/playbooks/i18n/en.json
+++ b/webapp/playbooks/i18n/en.json
@@ -166,6 +166,7 @@
   "GXjP8g": "All the runs that you can access will show here",
   "GZoWl1": "Automate activities for this task",
   "Gg/nch": "NOT PARTICIPATING",
+  "GhUeWo": "<b>Note:</b> People who are members of the selected user groups at the time when the run starts will be added to the run.",
   "GjCS6U": "Choose a template",
   "Gwmqz5": "Request an update",
   "GxJAK1": "The playbook you're requesting is private or does not exist.",
