--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -3248,6 +3248,7 @@
   "delete_post.cancel": "Cancel",
   "delete_post.comment": "Comment",
   "delete_post.confirm": "Confirm {term} Delete",
+  "delete_post.confirm_new": "Delete {term}",
   "delete_post.del": "Delete",
   "delete_post.post": "Post",
   "delete_post.question": "Are you sure you want to delete this {term}?",
