MM-52258 Replace usage of localizeAndFormatMessage (#23009)
* MM-52258 Replace usage of localizeAndFormatMessage

* Remove unused import

* Update snapshot

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1207,6 +1207,7 @@
   "admin.ldap_feature_discovery_cloud.call_to_action.primary": "Upgrade now",
   "admin.ldap_feature_discovery_cloud.call_to_action.primary_sales": "Contact sales",
   "admin.ldap_feature_discovery.call_to_action.primary": "Start trial",
+  "admin.ldap_feature_discovery.call_to_action.primary.cloudFree": "Try free for {trialLength} days",
   "admin.ldap_feature_discovery.call_to_action.secondary": "Learn more",
   "admin.ldap_feature_discovery.copy": "When you connect Mattermost with your organization's Active Directory/LDAP, users can log in without having to create new usernames and passwords.",
   "admin.ldap_feature_discovery.title": "Integrate Active Directory/LDAP with Mattermost Professional",
@@ -4523,6 +4524,7 @@
   "pricing_modal.title": "Select a plan",
   "pricing_modal.wantToTry": "Want to try? ",
   "pricing_modal.wantToUpgrade": "Want to upgrade? ",
+  "profile_popover.profileLabel": "Profile for {name}",
   "promote_to_user_modal.desc": "This action promotes the guest {username} to a member. It will allow the user to join public channels and interact with users outside of the channels they are currently members of. Are you sure you want to promote guest {username} to member?",
   "promote_to_user_modal.promote": "Promote",
   "promote_to_user_modal.title": "Promote guest {username} to member",
