MM-51481_Add Apps button and category context menu

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4919,8 +4919,8 @@
   "shortcuts.msgs.search_channel": "In channel:\tCtrl|F",
   "shortcuts.msgs.search_channel.mac": "In channel:\t⌘|F",
   "shortcuts.msgs.search.header": "Searching",
-  "shortcuts.nav.apps_menu": "Direct messages menu:\tCtrl|Shift|J",
-  "shortcuts.nav.apps_menu.mac": "Direct messages menu:\t⌘|Shift|J",
+  "shortcuts.nav.apps_menu": "Apps menu:\tCtrl|Shift|J",
+  "shortcuts.nav.apps_menu.mac": "Apps menu:\t⌘|Shift|J",
   "shortcuts.nav.direct_messages_menu": "Direct messages menu:\tCtrl|Shift|K",
   "shortcuts.nav.direct_messages_menu.mac": "Direct messages menu:\t⌘|Shift|K",
   "shortcuts.nav.expand_sidebar": "Expand the right sidebar:\tCtrl|Shift|.",
