[MM-37933] Channel preference to auto-follow all threads in the channel (#21430)
* Add auto-follow feature
---------

Co-authored-by: Mattermod <mattermod@users.noreply.github.com>
Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -8460,6 +8460,10 @@
     "translation": "Update at must be a valid time."
   },
   {
+    "id": "model.channel_member.is_valid.channel_auto_follow_threads_value.app_error",
+    "translation": "Invalid channel-auto-follow-threads value."
+  },
+  {
     "id": "model.channel_member.is_valid.channel_id.app_error",
     "translation": "Invalid channel id."
   },
