--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -1,3 +1,4 @@
+
 {
   "about.buildnumber": "Build Number:",
   "about.cloudEdition": "Cloud",
@@ -1405,7 +1406,9 @@
   "admin.logs.Error": "Error",
   "admin.logs.fullEvent": "Full log event",
   "admin.logs.Info": "Info",
+  "admin.logs.next": "Next",
   "admin.logs.options": "Options",
+  "admin.logs.prev": "Previous",
   "admin.logs.ReloadLogs": "Reload Logs",
   "admin.logs.showErrors": "Show last {n} errors",
   "admin.logs.title": "Server Logs",
