--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -883,6 +883,8 @@
   "admin.environment.webServer": "Web Server",
   "admin.experimental.allowCustomThemes.desc": "Enables the **Display > Theme > Custom Theme** section in Settings.",
   "admin.experimental.allowCustomThemes.title": "Allow Custom Themes:",
+  "admin.experimental.alwaysShowTeamSidebar.desc": "When enabled (default off), team sidebar always appears",
+  "admin.experimental.alwaysShowTeamSidebar.title": "Always show team sidebar:",
   "admin.experimental.clientSideCertCheck.desc": "When **primary**, after the client side certificate is verified, user’s email is retrieved from the certificate and is used to log in without a password. When **secondary**, after the client side certificate is verified, user’s email is retrieved from the certificate and matched against the one supplied by the user. If they match, the user logs in with regular email/password credentials.",
   "admin.experimental.clientSideCertCheck.title": "Client-Side Certification Login Method:",
   "admin.experimental.clientSideCertEnable.desc": "Enables client-side certification for your Mattermost server. See <link>documentation</link> to learn more.",
