--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -4248,7 +4248,7 @@
   "onboardingTask.checklist.no_thanks": "No, thanks",
   "onboardingTask.checklist.start_enterprise_now": "Start your free Enterprise trial now!",
   "onboardingTask.checklist.task_complete_your_profile": "Complete your profile.",
-  "onboardingTask.checklist.task_create_from_work_template": "Create from a template",
+  "onboardingTask.checklist.task_create_from_work_template": "Create from a template.",
   "onboardingTask.checklist.task_download_mm_apps": "Download the Desktop and Mobile Apps.",
   "onboardingTask.checklist.task_explore_other_tools_in_platform": "Explore other tools in the platform.",
   "onboardingTask.checklist.task_invite_team_members": "Invite team members to the workspace.",
