server/public/ -- pre-requisite changes (#23278)
* invert depdendency: filestore -> model

* markdown: nolint:misspell

* inline jsonutils within model

* push model.GetInfoForBytes -> channels/app

* push channel/utils.CompileGo* -> plugin/utils

* push plugin/scheduler -> channels/jobs/plugins

* push utils.Copy(File|Dir) -> model

* oauthproiders/gitlab -> channels/app/oauthproviders/gitlab

* decouple plugin from einterfaces.MetricsInterface

* fix TestGetInfoForFile

* Revert "Run golangci in server CI (#23240)"

This reverts commit 6646d9716a0239311204ee1fef5a75e6c08a37ed.

* add model/utils

---------

Co-authored-by: Agniva De Sarker <agnivade@yahoo.co.in>

--- a/server/i18n/en.json
+++ b/server/i18n/en.json
@@ -5128,6 +5128,10 @@
     "translation": "Unable to get the file info."
   },
   {
+    "id": "app.file_info.get.gif.app_error",
+    "translation": "Could not decode gif."
+  },
+  {
     "id": "app.file_info.get_for_post.app_error",
     "translation": "Unable to get the file info for the post."
   },
@@ -9090,10 +9094,6 @@
   {
     "id": "model.emoji.user_id.app_error",
     "translation": "Invalid creator id."
-  },
-  {
-    "id": "model.file_info.get.gif.app_error",
-    "translation": "Could not decode gif."
   },
   {
     "id": "model.file_info.is_valid.create_at.app_error",
