Enhance import submenu in main settings

--- a/webapp/boards/i18n/en.json
+++ b/webapp/boards/i18n/en.json
@@ -254,6 +254,7 @@
   "Sidebar.export-archive": "Export archive",
   "Sidebar.import": "Import",
   "Sidebar.import-archive": "Import archive",
+  "Sidebar.external-import-docs": "External import docs",
   "Sidebar.new-category.badge": "New",
   "Sidebar.new-category.drag-boards-cta": "Drag boards here...",
   "Sidebar.no-boards-in-category": "No boards inside",
