Translations for "Import archive file" in import submenu

--- a/webapp/boards/i18n/en.json
+++ b/webapp/boards/i18n/en.json
@@ -253,7 +253,7 @@
   "Sidebar.duplicate-board": "Duplicate board",
   "Sidebar.export-archive": "Export archive",
   "Sidebar.import": "Import",
-  "Sidebar.import-archive": "Import archive",
+  "Sidebar.import-archive": "Import archive file",
   "Sidebar.external-import-docs": "External import docs",
   "Sidebar.new-category.badge": "New",
   "Sidebar.new-category.drag-boards-cta": "Drag boards here...",
