--- a/webapp/boards/i18n/en_AU.json
+++ b/webapp/boards/i18n/en_AU.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Duplicate board",
   "Sidebar.export-archive": "Export archive",
   "Sidebar.import": "Import",
-  "Sidebar.import-archive": "Import archive",
+  "Sidebar.import-archive": "Import archive file",
   "Sidebar.invite-users": "Invite users",
   "Sidebar.logout": "Log out",
   "Sidebar.new-category.badge": "New",
