--- a/webapp/boards/i18n/fr.json
+++ b/webapp/boards/i18n/fr.json
@@ -253,7 +253,7 @@
   "Sidebar.duplicate-board": "Dupliquer une carte",
   "Sidebar.export-archive": "Exporter une archive",
   "Sidebar.import": "Importer",
-  "Sidebar.import-archive": "Importer une archive",
+  "Sidebar.import-archive": "Importer un fichier d'archive",
   "Sidebar.invite-users": "Inviter des utilisateurs",
   "Sidebar.logout": "Se déconnecter",
   "Sidebar.new-category.badge": "Nouveau",
