--- a/webapp/boards/i18n/it.json
+++ b/webapp/boards/i18n/it.json
@@ -218,7 +218,7 @@
   "Sidebar.duplicate-board": "Duplica bacheca",
   "Sidebar.export-archive": "Esporta archivio",
   "Sidebar.import": "Importa",
-  "Sidebar.import-archive": "Importa archivio",
+  "Sidebar.import-archive": "Importa file di archivio",
   "Sidebar.invite-users": "Invita utenti",
   "Sidebar.logout": "Logout",
   "Sidebar.no-boards-in-category": "Nessuna bacheca all'interno",
