--- a/webapp/boards/i18n/ja.json
+++ b/webapp/boards/i18n/ja.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Boardを複製する",
   "Sidebar.export-archive": "エクスポート",
   "Sidebar.import": "インポート",
-  "Sidebar.import-archive": "インポート",
+  "Sidebar.import-archive": "アーカイブファイルをインポートする",
   "Sidebar.invite-users": "ユーザーを招待する",
   "Sidebar.logout": "ログアウト",
   "Sidebar.new-category.badge": "新規",
