--- a/webapp/boards/i18n/lt.json
+++ b/webapp/boards/i18n/lt.json
@@ -253,7 +253,7 @@
   "Sidebar.duplicate-board": "Pasikartojanti lenta",
   "Sidebar.export-archive": "Eksportuoti archyvą",
   "Sidebar.import": "Importuoti",
-  "Sidebar.import-archive": "Importuoti archyvą",
+  "Sidebar.import-archive": "Importuoti archyvo failą",
   "Sidebar.new-category.badge": "Naujas",
   "Sidebar.new-category.drag-boards-cta": "Vilkite lentas čia...",
   "Sidebar.no-boards-in-category": "Viduje nėra lentų",
