--- a/webapp/boards/i18n/nl.json
+++ b/webapp/boards/i18n/nl.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Board dupliceren",
   "Sidebar.export-archive": "Archief exporteren",
   "Sidebar.import": "Importeren",
-  "Sidebar.import-archive": "Archief importeren",
+  "Sidebar.import-archive": "Importeer archiefbestand",
   "Sidebar.invite-users": "Gebruikers uitnodigen",
   "Sidebar.logout": "Afmelden",
   "Sidebar.new-category.badge": "Nieuw",
