--- a/webapp/boards/i18n/pl.json
+++ b/webapp/boards/i18n/pl.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Duplikuj tablicę",
   "Sidebar.export-archive": "Eksportuj archiwum",
   "Sidebar.import": "Importuj",
-  "Sidebar.import-archive": "Importuj archiwum",
+  "Sidebar.import-archive": "Importuj plik archiwum",
   "Sidebar.invite-users": "Zaproś użytkowników",
   "Sidebar.logout": "Wyloguj się",
   "Sidebar.new-category.badge": "Nowy",
