--- a/webapp/boards/i18n/ru.json
+++ b/webapp/boards/i18n/ru.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Дублировать доску",
   "Sidebar.export-archive": "Экспорт архива",
   "Sidebar.import": "Импорт",
-  "Sidebar.import-archive": "Импорт архива",
+  "Sidebar.import-archive": "Импортировать архивный файл",
   "Sidebar.invite-users": "Пригласить пользователей",
   "Sidebar.logout": "Выйти",
   "Sidebar.new-category.badge": "Новый",
