--- a/webapp/boards/i18n/sk.json
+++ b/webapp/boards/i18n/sk.json
@@ -213,7 +213,7 @@
   "Sidebar.changePassword": "Zmeniť heslo",
   "Sidebar.delete-board": "Odstrániť nástenku",
   "Sidebar.export-archive": "Export archívu",
-  "Sidebar.import-archive": "Import archívu",
+  "Sidebar.import-archive": "Importovať archívny súbor",
   "Sidebar.invite-users": "Pozvať užívateľa",
   "Sidebar.logout": "Odhlásiť sa",
   "Sidebar.random-icons": "Náhodné ikony",
