--- a/webapp/boards/i18n/sv.json
+++ b/webapp/boards/i18n/sv.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Duplicera Board",
   "Sidebar.export-archive": "Exportera arkiv",
   "Sidebar.import": "Importera",
-  "Sidebar.import-archive": "Importera arkiv",
+  "Sidebar.import-archive": "Importera arkivfil",
   "Sidebar.invite-users": "Bjud in användare",
   "Sidebar.logout": "Logga ut",
   "Sidebar.new-category.badge": "Ny",
