--- a/webapp/boards/i18n/tr.json
+++ b/webapp/boards/i18n/tr.json
@@ -256,7 +256,7 @@
   "Sidebar.duplicate-board": "Panoyu kopyala",
   "Sidebar.export-archive": "Arşivi dışa aktar",
   "Sidebar.import": "İçe aktar",
-  "Sidebar.import-archive": "Arşivi içe aktar",
+  "Sidebar.import-archive": "Arşiv dosyası import et",
   "Sidebar.invite-users": "Kullanıcıları çağır",
   "Sidebar.logout": "Oturumu kapat",
   "Sidebar.new-category.badge": "Yeni",
