--- a/webapp/boards/i18n/nl.json
+++ b/webapp/boards/i18n/nl.json
@@ -257,6 +257,7 @@
   "Sidebar.export-archive": "Archief exporteren",
   "Sidebar.import": "Importeren",
   "Sidebar.import-archive": "Importeer archiefbestand",
+  "Sidebar.external-import-docs": "Externe importdocumenten",
   "Sidebar.invite-users": "Gebruikers uitnodigen",
   "Sidebar.logout": "Afmelden",
   "Sidebar.new-category.badge": "Nieuw",
