--- a/webapp/boards/i18n/pl.json
+++ b/webapp/boards/i18n/pl.json
@@ -257,6 +257,7 @@
   "Sidebar.export-archive": "Eksportuj archiwum",
   "Sidebar.import": "Importuj",
   "Sidebar.import-archive": "Importuj plik archiwum",
+  "Sidebar.external-import-docs": "Zewnętrzne dokumenty importowe",
   "Sidebar.invite-users": "Zaproś użytkowników",
   "Sidebar.logout": "Wyloguj się",
   "Sidebar.new-category.badge": "Nowy",
