--- a/webapp/boards/i18n/sk.json
+++ b/webapp/boards/i18n/sk.json
@@ -214,6 +214,7 @@
   "Sidebar.delete-board": "Odstrániť nástenku",
   "Sidebar.export-archive": "Export archívu",
   "Sidebar.import-archive": "Importovať archívny súbor",
+  "Sidebar.external-import-docs": "Externé importné doks",
   "Sidebar.invite-users": "Pozvať užívateľa",
   "Sidebar.logout": "Odhlásiť sa",
   "Sidebar.random-icons": "Náhodné ikony",
