--- a/webapp/boards/i18n/sv.json
+++ b/webapp/boards/i18n/sv.json
@@ -257,6 +257,7 @@
   "Sidebar.export-archive": "Exportera arkiv",
   "Sidebar.import": "Importera",
   "Sidebar.import-archive": "Importera arkivfil",
+  "Sidebar.external-import-docs": "Externa importdokument",
   "Sidebar.invite-users": "Bjud in användare",
   "Sidebar.logout": "Logga ut",
   "Sidebar.new-category.badge": "Ny",
