--- a/webapp/boards/i18n/it.json
+++ b/webapp/boards/i18n/it.json
@@ -219,6 +219,7 @@
   "Sidebar.export-archive": "Esporta archivio",
   "Sidebar.import": "Importa",
   "Sidebar.import-archive": "Importa file di archivio",
+  "Sidebar.external-import-docs": "Docs di importazione esterni",
   "Sidebar.invite-users": "Invita utenti",
   "Sidebar.logout": "Logout",
   "Sidebar.no-boards-in-category": "Nessuna bacheca all'interno",
